--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class="header">
       <h1 class="heading content-section header__title">Карты подскажут</h1>
       <nav class="header__menu content-section">
-        <div class="header__logo">
+        <a href="#0" class="header__logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="135" height="25">
             <use href="./images/logo.svg#logo"></use>
           </svg>
-        </div>
+        </a>
         <ul class="header__theme-toggler">
           <li>
             <button
@@ -46,8 +46,8 @@
         Креативный подход к решению проблем
       </h2>
       <div class="content__text-block content__text-block_type_first-lettered">
-        <p class="content__paragraph">
-          Творческие кризисы, кажется, рано или поздно испытывает любой человек.
+        <p class="content__paragraph"
+        >Творческие кризисы, кажется, рано или поздно испытывает любой человек.
           Часто бывает так, что вы сталкиваетесь с проблемой, не можете решить
           её с первого раза и начинаете думать, что вообще ни на что не
           способны. Мозг запоминает эту модель поведения, и на следующий день
@@ -131,23 +131,23 @@
           фанаты Ино. Есть довольно симпатичные
           <a
             href="https://obliquestrategies.ca/"
-            lang="en_US"
+            lang="en"
             target="_blank"
             class="content__link"
             >веб-сайты</a
           >
-          с диджитал-эквивалентами карточек и приложения для
+          с диджитал-эквивалентами карточек и приложения
           <a
             href="https://apps.apple.com/us/app/oblique-strategies-se/id1104927011"
-            lang="en_US"
+            lang="en"
             target="_blank"
             class="content__link"
-            >iOS</a
+            >для iOS</a
           >
           и
           <a
             href="https://play.google.com/store/apps/details?id=com.monoloco.obliquestrategies&hl=en_US&gl=US&pli=1"
-            lang="en_US"
+            lang="en"
             target="_blank"
             class="content__link"
             >Android</a
